--- a/src/content/about.html
+++ b/src/content/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>About</title>
-    <link rel="stylesheet" href="iframe.css">
+    <link href="iframe.css" rel="stylesheet">
   </head>
   <body>
 
@@ -17,26 +17,28 @@
     <h2 id="changelog">Changelog</h2>
     <dl>
       <dt>8.0</dt>
-        <dd>Added Complete Light/Dark Theme</dd>
-        <dd>Added Get Location feature</dd>
-        <dd>Added Global Exclude</dd>
-        <dd>Unified code for Firefox, Chrome, and other Chromium-based browsers</dd>
-        <dd>Unified storage to share between Firefox & Chrome</dd>
-        <dd>Updated code & style for manifest v3 (MV3) compatibility</dd>
-        <dd>Increased minimum version to Firefox 93 (released 2021-10-05)</dd>
-        <dd>Dropped 'browser_style' in preparation for MV3</dd>
-        <dd></dd>
-        <dd></dd>
-        <dd></dd>
-        <dd></dd>
+      <dd>Added complete Light/Dark Theme</dd>
+      <dd>Added Exclude host feature</dd>
+      <dd>Added Get Location feature</dd>
+      <dd>Added Global Exclude</dd>
+      <dd>Added Host Pattern to proxy feature</dd>
+      <dd>Added Import FoxyProxy Account (wasn't available in CHrome)</dd>
+      <dd>Added Import From URL</dd>
+      <dd>Added Limit WebRTC feature</dd>
+      <dd>Added live Log (Firefox only)</dd>
+      <dd>Dropped 'browser_style' in preparation for MV3</dd>
+      <dd>Increased minimum version to Firefox 93 (released 2021-10-05)</dd>
+      <dd>Unified code for Firefox, Chrome, and other Chromium-based browsers</dd>
+      <dd>Unified storage to share between Firefox & Chrome</dd>
+      <dd>Update User Interface</dd>
+      <dd>Updated code & style for manifest v3 (MV3) compatibility</dd>
+      <dd>Updated Import Proxy List</dd>
+      <dd></dd>
 
     </dl>
 
     <h2 id="credits">Credits</h2>
     <dl>
-      <!-- <dt>Icons</dt>
-      <dd>SVG: Mozilla</dd>
-      <dd>SVG: http://www.onlinewebfonts.com/icon</dd> -->
 
       <dt>Translations</dt>
       <dd><a href="https://github.com/foxyproxy/firefox-extension" target="_blank">Github Public Repository</a></dd>
@@ -49,23 +51,19 @@
       <dd>uk: <a href="https://github.com/sponsors/webknjaz" target="_blank">Sviatoslav Sydorenko</a></dd>
       <dd>zh_CN: <a href="https://github.com/wsxy162" target="_blank">FeralMeow </a></dd>
       <dd>zh_TW: <a href="https://github.com/samuikaze" target="_blank">samuikaze</a></dd>
-
     </dl>
-
 
     <p style="margin-top: 5em;">Please <a href="https://www.paypal.me/ericjung2/5.99" target="_blank">donate</a> or <a
       href="https://getfoxyproxy.org/order/" target="_blank">buy dedicated VPN/Proxy Servers</a> in over 100 countries.<br>
     <i>(including such remote places like <a href="https://wikipedia.org/wiki/Réunion" target="_blank">Reunion
         Island</a>)</i></p>
 
-
     <figure>
       <img src="../image/ericjung.png" alt="">
       <figcaption><a href="mailto:eric.jung@getfoxyproxy.org">Eric H. Jung</a><br>Denver, Colorado, USA</figcaption>
     </figure>
 
-
-    <p style="font: 1.8em cursive;">Thank you for using FoxyProxy!</p>
+    <p style="font: 1.5em cursive;">Thank you for using FoxyProxy!</p>
     <img src="../image/logo.svg" style="width: 5em;" alt="">
   </article>
   </body>
