--- a/src/content/options.html
+++ b/src/content/options.html
@@ -118,7 +118,7 @@
           <summary>
             <span>🌎</span>
             <span></span>
-            <input type="checkbox" class="toggle" checked>
+            <input type="checkbox" class="toggle" data-id="active" checked>
             <button type="button" class="bin" data-i18n="delete|title"></button>
             <button type="button" class="up">▲</button>
             <button type="button" class="down">▼</button>
